# comunicacao-processos

./: .gitignore  CMakeLists.txt  README.md
include/memoria-compartilhada/: Memoria.h
include/models/: Produto.h
include/pipes/: Filho.h  Pai.h
src/: main.cpp  processo_filho.cpp  processo_pai.cpp
src/memoria-compartilhada/: Memoria.cpp  escritor.cpp  quadro_leitor.cpp
src/models/: Produto.cpp
src/pipes/: Filho.cpp  Pai.cpp  processo_filho.cpp  processo_pai.cpp
